[gd_scene load_steps=9 format=3 uid="uid://c27go8qjx16je"]

[ext_resource type="PackedScene" uid="uid://c486dfptvtwsf" path="res://Scenes/ui/keyboard/letter.tscn" id="1_0hs4y"]
[ext_resource type="Script" path="res://Scenes/items/keyboard_letter_pickup_item.gd" id="1_ls6he"]
[ext_resource type="Texture2D" uid="uid://d2ixun4gywkkq" path="res://Sprites/Key Pickup-Sheet.png" id="2_2oc1c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7ws8t"]

[sub_resource type="Animation" id="Animation_mx24b"]
resource_name = "pickup"
length = 0.150002
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PickupSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0166667, 0.0333333, 0.05, 0.0666667, 0.0833333, 0.1, 0.116667, 0.133333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LetterSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2.08165e-12, 2.08165e-12), Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_diy6p"]
length = 0.001

[sub_resource type="Animation" id="Animation_8k7xv"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qql16"]
_data = {
"RESET": SubResource("Animation_diy6p"),
"idle": SubResource("Animation_8k7xv"),
"pickup": SubResource("Animation_mx24b")
}

[node name="KeyboardLetterPickupItem" type="Area2D"]
scale = Vector2(4, 4)
collision_layer = 64
script = ExtResource("1_ls6he")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.87044, 0.87044)
shape = SubResource("CircleShape2D_7ws8t")

[node name="PickupSprite" type="Sprite2D" parent="."]
position = Vector2(0, -3)
texture = ExtResource("2_2oc1c")
hframes = 9

[node name="LetterSprite" parent="." instance=ExtResource("1_0hs4y")]
position = Vector2(0.75, 0)
vframes = 14
frame = 37

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qql16")
}
autoplay = "RESET"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
